connect/tests/macros/quint_run/fail/invalid_num.stderr
error: invalid digit found in string
 --> tests/macros/quint_run/fail/invalid_num.rs:7:46
  |
7 | #[quint_run(spec = "spec.qnt", max_samples = -666)]
  |                                              ^

error: expected integer literal
  --> tests/macros/quint_run/fail/invalid_num.rs:12:46
   |
12 | #[quint_run(spec = "spec.qnt", max_samples = "666")]
   |                                              ^^^^^
